--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for MinotaurRace
 
+1.3.2 - Fixed a royalty specific patch
+
+
 1.3.1 - Fixed the race-specific graphics for the samurai version of the prestige marine helmet
 
 
